--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=quarkus
 quarkus.datasource.password=quarkus
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/quarkus
 quarkus.datasource.jdbc.min-size=5
 quarkus.datasource.jdbc.max-size=15
+
+quarkus.hibernate-orm.database.generation=drop-and-create
