--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=quarkus
 quarkus.datasource.password=quarkus
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/quarkus
+quarkus.datasource.jdbc.url=jdbc:postgresql://172.18.0.1:5432/quarkus
 quarkus.datasource.jdbc.min-size=5
 quarkus.datasource.jdbc.max-size=15
 
